# Added Dependency for Execute Test
CPMADDPACKAGE(
        NAME doctest
        GITHUB_REPOSITORY onqtam/doctest
        GIT_TAG 2.4.0
)

ENABLE_TESTING()

MACRO(ADD_CATACLYSM_TEST _NAME_TARGET _NAME_FILE)
    ADD_EXECUTABLE(${_NAME_TARGET} ${_NAME_FILE})
    SET_TARGET_PROPERTIES(${_NAME_TARGET} PROPERTIES CXX_STANDARD 17)
    TARGET_LINK_LIBRARIES(${_NAME_TARGET} PRIVATE doctest)
    ADD_TEST(NAME ${_NAME_TARGET} COMMAND ${_NAME_TARGET})
ENDMACRO()

ADD_SUBDIRECTORY(Unit/)